do not link against libidn
 dpkg-shlibdeps warns "package could avoid a useless dependency if
 libxmpp_core.so was not linked against libidn.so.11 (it uses none of the
 library's symbols)"

--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -29,6 +29,6 @@ SRCS=	xmpp-commands.c \
 	xep/version.c \
 	xep/xep.c
 
-LIB_LIBS = `pkg-config --libs loudmouth-1.0`
+LIB_LIBS = `pkg-config --libs loudmouth-1.0 | sed -e's/-lidn//'`
 
 include ../rules.mk
